[workspace]
resolver = "2"
members = [
    "unsafe_abstraction",
    "simple_shader",
    "simple_shader_builder_command",
    "simple_shader_builder_api",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
unsafe_abstraction = { path = "./unsafe_abstraction" }
cargo-gpu = { git = "https://github.com/Rust-GPU/cargo-gpu", rev = "e574460" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "f583740" }
rspirv = { version = "0.12" }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_arch, values("spirv"))']
