[workspace]
resolver = "2"
members = [
    "unsafe_abstraction",
    "simple_shader",
    "simple_shader_builder_command",
    "simple_shader_builder_api",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
unsafe_abstraction = { path = "./unsafe_abstraction" }
cargo-gpu = { git = "https://github.com/Rust-GPU/cargo-gpu", rev = "98931f8b9aa7471c3f0691f87174f4b478d86bc8" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "3e89e6cc7b32b51db51d75b5f558ccd7ecf5b850" }
rspirv = { version = "0.12" }
log = { version = "0.4" }
env_logger = { version = "0.11" }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_arch, values("spirv"))']
