[package]
name = "simple_shader"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { workspace = true }

[lints]
workspace = true

[package.metadata.rust-gpu.install]
spirv-builder-source = "https://github.com/Rust-GPU/rust-gpu"
spirv-builder-version = "f583740"
rebuild-codegen = false
auto-install-rust-toolchain = true
force-overwrite-lockfiles-v4-to-v3 = false

[package.metadata.rust-gpu.build]
spirv-metadata = "Full"
