[package]
name = "simple_shader_builder_api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rspirv = { workspace = true }

[build-dependencies]
unsafe_abstraction = { workspace = true }
cargo-gpu = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
